# coschedula_monitor

./: CMakeLists.txt  Main.qml  README.md  logitem.cpp  logitem.h  main.cpp  matrix.h  monitor.cpp  monitor.h
